new message for wifi

--- a/readme
+++ b/readme
@@ -4,3 +4,9 @@
 
 	ro.kernel.wifi_module  = 4330 则为 4330 bcm
 	如果为空则为4329
+
+wifi_module=`cat /sys/wifi_properties/wifi_module`
+case "$wifi_module" in
+               "wifi_module=4330")
+        setprop ro.kernel.wifi_module 4330
+esac
